# ppp2_cpp

./: .gitignore  README.md
bstroustrup_code/: Common_window.cpp  Common_window.hpp  GUI.cpp  GUI.h  Graph.cpp  Graph.h  Gui.h  Matrix.h  Matrix11.h  MatrixIO.h  MatrixIO11.h  Simple_window.cpp  Simple_window.h  Time.cpp  Time.hpp  Window.cpp  Window.h  fltk.h  std_lib_facilities.h
part10/exercise10_1/: CMakeLists.txt
part10/exercise10_10/: CMakeLists.txt
part10/exercise10_11/: CMakeLists.txt
part10/exercise10_2/: CMakeLists.txt  exercise10_2.cmake
part10/exercise10_3/: CMakeLists.txt
part10/exercise10_4/: CMakeLists.txt
part10/exercise10_4_2/: CMakeLists.txt
part10/exercise10_5/: CMakeLists.txt
part10/exercise10_6/: CMakeLists.txt
part10/exercise10_7/: CMakeLists.txt
part10/exercise10_8/: CMakeLists.txt
part10/exercise10_9/: CMakeLists.txt
part10/exercise10_9/src/: main.cpp
part10/task10_1/: CMakeLists.txt  task10_1.cmake
part11/example/: CMakeLists.txt
part11/exercise11_1/: CMakeLists.txt
part11/exercise11_10_11/: CMakeLists.txt
part11/exercise11_12/: CMakeLists.txt
part11/exercise11_13/: CMakeLists.txt
part11/exercise11_14/: CMakeLists.txt
part11/exercise11_15/: CMakeLists.txt
part11/exercise11_16/: CMakeLists.txt
part11/exercise11_2/: CMakeLists.txt
part11/exercise11_3/: CMakeLists.txt
part11/exercise11_3/src/: CMakeLists.txt  main.cpp  vowelstream.cpp  vowelstream.hpp
part11/exercise11_4/: CMakeLists.txt
part11/exercise11_5/: CMakeLists.txt
part11/exercise11_6/: CMakeLists.txt
part11/exercise11_7/: CMakeLists.txt
part11/exercise11_8/: CMakeLists.txt
part11/exercise11_9/: CMakeLists.txt
part12/exercise12_1/: CMakeLists.txt
part12/exercise12_10/: CMakeLists.txt
part12/exercise12_11/: CMakeLists.txt
part12/exercise12_2/: CMakeLists.txt
part12/exercise12_3/: CMakeLists.txt
part12/exercise12_4/: CMakeLists.txt
part12/exercise12_5/: CMakeLists.txt
part12/exercise12_6/: CMakeLists.txt
part12/exercise12_7/: CMakeLists.txt
part12/exercise12_8/: CMakeLists.txt
part12/exercise12_9/: CMakeLists.txt
part16/exercise16_7/: CMakeLists.txt
part17/exercise17_11/: CMakeLists.txt
part17/exercise17_11/src/: CMakeLists.txt  Link.cpp  Link.hpp  add_src_hdr.cmake  main.cpp
part17/exercise17_13/: CMakeLists.txt  exercise17_13.cmake
part17/exercise17_14/: CMakeLists.txt
part17/exercise17_3_9/: CMakeLists.txt
part19/exercise19_10/: Unique_ptr.hpp  exercise19_10.pro  main.cpp
part19/exercise19_11/: Counted_ptr.hpp  Test_facilities.cpp  Test_facilities.hpp  counted_ptr_test.cpp  exercise19_11.pro  main.cpp
part19/exercise19_12/: File_handle.hpp  exercise19_12.pro  main.cpp
part19/exercise19_13/: Tracer.hpp  exercise19_13.pro  main.cpp
part19/exercise19_16/: Vector_small.hpp  exercise19_16.pro  main.cpp
part19/exercise19_1_2/: CMakeLists.txt  exercise19_1_2.cmake
part19/exercise19_1_2/src/: CMakeLists.txt  Exercises.hpp  add_src_hdr.cmake  main.cpp
part19/exercise19_4/: CMakeLists.txt  exercise19_4.cmake
part19/exercise19_5/: Int.hpp  exer19_5.pro  main.cpp
part19/exercise19_6/: Number.hpp  Test.hpp  exercise19_6.pro  main.cpp
part19/exercise19_7/: exercise19_7.pro  main.cpp
part19/exercise19_8_9/: Allocator.hpp  Vector_easy.hpp  exercise19_8_9.pro  main.cpp
part19/main_vector/: Vector.hpp  main.cpp  main_vector.pro
part20/example20/: Allocator.hpp  Document.cpp  Document.hpp  List_easy.hpp  Vector.hpp  example20.pro  main.cpp
part20/exercise20_11/: main.cpp
part20/exercise20_12/: List.hpp  List_base.hpp  exercise20_12.pro  main.cpp
part20/exercise20_12_13/: List.hpp  List_base.hpp  exercise20_12_13.pro  main.cpp
part20/exercise20_13/: List.hpp  List_base.hpp  main.cpp
part20/exercise20_14/: Slist.hpp  Slist_base.hpp  exercise20_14.pro  main.cpp
part20/exercise20_15-17/: exercise20_15-17.pro  main.cpp
part20/exercise20_18/: Vector.hpp  Vector_base.hpp  exercise20_18.pro  main.cpp
part20/exercise20_19/: List.hpp  List_base.hpp
part20/exercise20_2-4/: main.cpp
part20/exercise20_20/: main.cpp
part20/exercise20_5/: exercise20_5.pro  main.cpp
part20/exercise20_6/: main.cpp
part20/exercise20_7/: main.cpp
part20/exercise20_8-10/: exercise20_8-10.pro  main.cpp
part20/tasks/: main.cpp
part21/: Query_window.cpp  Query_window.hpp
part21/example21/: example21.pro  main.cpp
part21/exercise21_10/: exercise21_10.pro  main.cpp
part21/exercise21_11/: Input_orders_window.cpp  Input_orders_window.hpp  exercise21_11.pro  main.cpp
part21/exercise21_12/: Query_orders_window.cpp  Query_orders_window.hpp  exercise21_12.pro  main.cpp
part21/exercise21_13/: Clear_punctstream.cpp  Clear_punctstream.hpp  exercise21_13.pro  main.cpp
part21/exercise21_14/: Finder.hpp  exercise21_14.pro  main.cpp
part21/exercise21_15/: exercise21_15.pro  main.cpp
part21/exercise21_3_4/: main.cpp
part21/exercise21_5/: main.cpp
part21/exercise21_6/: main.cpp
part21/exercise21_7/: main.cpp
part21/exercise21_8/: main.cpp
part21/exercise21_9/: Order.cpp  Order.hpp  exercise21_9.pro  main.cpp
part21/tasks21/: main.cpp  tasks21.pro
part23/example23/: Mail_file.cpp  Mail_file.hpp  (+1 more)
(+372 files in other folders)
